--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div class="cars-container">
         <h1>Small Preview of the Auto Show</h1>
     </div>
-    <div class="cars-container">
+    <div class="cars-container" id="last">
         <div class="car-card">
             <div class="img-container">
                 <img src="images/g65.jpg" alt="">
@@ -168,10 +168,10 @@
                 <p><i class="fas fa-tachometer-alt"></i> Max speed: 320 km/h (200 mph)</p>
             </div>
         </div>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" async></script>
-        <script src="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.min.js" async></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.min.js"></script>
     </div>
-    <script src="slick-menu.js" async></script>
+    <script src="slick-menu.js"></script>
     <footer class="footer-section">
         <h3>NEWSLETTER</h3>
         <p>Subscribe to our Newsletter!</p>
