--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             </div>
         </div>
     </div>
+    <script src="banner-animation.js" async></script>
     <div class="info-section">
         <h1>Danov's Auto Show</h1>
         <div class="paragraphs">
@@ -192,7 +193,6 @@
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.min.js"></script>
     <script defer src="slick-menu.js"></script>
-    <script defer src="banner-animation.js"></script>
 </body>
 
 </html>
