--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <header class="nav-header">
+    <header class="nav-header" id="header">
         <a href="#" class="logo">
             <img class="logo-img" src="images/logo.png" alt="Logo">
         </a>
