Changed the size of the logo in the header

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Auto Show</a></li>
+                    <li class="auto-show"><a href="#">Auto Show</a></li>
                     <li><a href="#">Log in</a></li>
                     <li><a href="#">About</a></li>
                 </ul>
