Fixed preview images reloading after tabbing out

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="preload" as="image" href="images/mercedes-gt.webp">
     <link rel="preload" as="image" href="images/BMW-M8.webp">
     <link rel="preload" href="banner-animation.js" as="script">
+    <link rel="preload" as="image" href="images/g65.jpg">
+    <link rel="preload" as="image" href="images/x6-4.jpg">
+    <link rel="preload" as="image" href="images/Screenshot (1514).png">
 </head>
 
 <body>
@@ -113,12 +116,12 @@
     <div class="cars-container" id="last">
         <div class="car-card">
             <div class="img-container">
-                <img src="images/g65.jpg" alt="">
-                <img src="images/g65-pic2.jpg" alt="">
-                <img src="images/g65-pic3.jpg" alt="">
-                <img src="images/g65-pic4.jpg" alt="">
-                <img src="images/g65-pic1.jpg" alt="">
-                <img src="images/g65-pic5.jpg" alt="">
+                <img data-src="images/g65.jpg" alt="" loading="eager">
+                <img data-src="images/g65-pic2.jpg" alt="" loading="eager">
+                <img data-src="images/g65-pic3.jpg" alt="" loading="eager">
+                <img data-src="images/g65-pic4.jpg" alt="" loading="eager">
+                <img data-src="images/g65-pic1.jpg" alt="" loading="eager">
+                <img data-src="images/g65-pic5.jpg" alt="" loading="eager">
             </div>
             <div class="car-info">
                 <h2>2023 MERCEDES-AMG G63 BRABUS 800</h2>
@@ -133,12 +136,12 @@
         </div>
         <div class="car-card">
             <div class="img-container">
-                <img src="images/x6-4.jpg" alt="">
-                <img src="images/X6.jpg" alt="">
-                <img src="images/x6-1.png" alt="">
-                <img src="images/x6-3.png" alt="">
-                <img src="images/x6-5.jpg" alt="">
-                <img src="images/x6-2.png" alt="">
+                <img data-src="images/x6-4.jpg" alt="" loading="eager">
+                <img data-src="images/X6.jpg" alt="">
+                <img data-src="images/x6-1.png" alt="">
+                <img data-src="images/x6-3.png" alt="">
+                <img data-src="images/x6-5.jpg" alt="">
+                <img data-src="images/x6-2.png" alt="">
             </div>
             <div class="car-info">
                 <h2>2022 BMW X6 M MANHART EDITION</h2>
@@ -153,12 +156,12 @@
         </div>
         <div class="car-card">
             <div class="img-container">
-                <img src="images/Screenshot (1514).png" alt="">
-                <img src="images/urus.jpg" alt="">
-                <img src="images/Screenshot (1509).png" alt="">
-                <img src="images/Screenshot (1510).png" alt="">
-                <img src="images/Screenshot (1512).png" alt="">
-                <img src="images/Screenshot (1511).png" alt="">
+                <img data-src="images/Screenshot (1514).png" alt="" loading="eager">
+                <img data-src="images/urus.jpg" alt="">
+                <img data-src="images/Screenshot (1509).png" alt="">
+                <img data-src="images/Screenshot (1510).png" alt="">
+                <img data-src="images/Screenshot (1512).png" alt="">
+                <img data-src="images/Screenshot (1511).png" alt="">
             </div>
             <div class="car-info">
                 <h2>2022 LAMBORGHINI URUS MANSORY ENDITION</h2>
@@ -172,6 +175,9 @@
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.min.js"></script>
+    <script src="slick-menu.js"></script>
     <footer class="footer-section">
         <h3>NEWSLETTER</h3>
         <p>Subscribe to our Newsletter!</p>
@@ -189,9 +195,37 @@
             <p>&copy; 2023 Danov's Auto Show. All rights reserved.</p>
         </div>
     </footer>
-    <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.min.js"></script>
-    <script defer src="slick-menu.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            let images = document.querySelectorAll('img[data-src]');
+            let options = {
+                root: null,
+                rootMargin: '0px',
+                threshold: 0.1
+            };
+
+            let loadImage = function (image) {
+                image.setAttribute('src', image.getAttribute('data-src'));
+                image.onload = function () {
+                    image.removeAttribute('data-src');
+                };
+            };
+
+            let observer = new IntersectionObserver(function (entries, observer) {
+                entries.forEach(function (entry) {
+                    if (entry.isIntersecting) {
+                        let image = entry.target;
+                        loadImage(image);
+                        observer.unobserve(image);
+                    }
+                });
+            }, options);
+
+            images.forEach(function (image) {
+                observer.observe(image);
+            });
+        });
+    </script>
 </body>
 
 </html>
