--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="preload" as="image" href="images/g65.jpg">
     <link rel="preload" as="image" href="images/x6-4.jpg">
     <link rel="preload" as="image" href="images/Screenshot (1514).png">
+
 </head>
 
 <body>
@@ -117,11 +118,11 @@
         <div class="car-card">
             <div class="img-container">
                 <img data-src="images/g65.jpg" alt="" loading="eager">
-                <img data-src="images/g65-pic2.jpg" alt="" loading="eager">
-                <img data-src="images/g65-pic3.jpg" alt="" loading="eager">
-                <img data-src="images/g65-pic4.jpg" alt="" loading="eager">
-                <img data-src="images/g65-pic1.jpg" alt="" loading="eager">
-                <img data-src="images/g65-pic5.jpg" alt="" loading="eager">
+                <img src="images/g65-pic2.jpg" alt="">
+                <img src="images/g65-pic3.jpg" alt="">
+                <img src="images/g65-pic4.jpg" alt="">
+                <img src="images/g65-pic1.jpg" alt="">
+                <img src="images/g65-pic5.jpg" alt="">
             </div>
             <div class="car-info">
                 <h2>2023 MERCEDES-AMG G63 BRABUS 800</h2>
@@ -137,11 +138,11 @@
         <div class="car-card">
             <div class="img-container">
                 <img data-src="images/x6-4.jpg" alt="" loading="eager">
-                <img data-src="images/X6.jpg" alt="">
-                <img data-src="images/x6-1.png" alt="">
-                <img data-src="images/x6-3.png" alt="">
-                <img data-src="images/x6-5.jpg" alt="">
-                <img data-src="images/x6-2.png" alt="">
+                <img src="images/X6.jpg" alt="">
+                <img src="images/x6-1.png" alt="">
+                <img src="images/x6-3.png" alt="">
+                <img src="images/x6-5.jpg" alt="">
+                <img src="images/x6-2.png" alt="">
             </div>
             <div class="car-info">
                 <h2>2022 BMW X6 M MANHART EDITION</h2>
@@ -157,11 +158,11 @@
         <div class="car-card">
             <div class="img-container">
                 <img data-src="images/Screenshot (1514).png" alt="" loading="eager">
-                <img data-src="images/urus.jpg" alt="">
-                <img data-src="images/Screenshot (1509).png" alt="">
-                <img data-src="images/Screenshot (1510).png" alt="">
-                <img data-src="images/Screenshot (1512).png" alt="">
-                <img data-src="images/Screenshot (1511).png" alt="">
+                <img src="images/urus.jpg" alt="">
+                <img src="images/Screenshot (1509).png" alt="">
+                <img src="images/Screenshot (1510).png" alt="">
+                <img src="images/Screenshot (1512).png" alt="">
+                <img src="images/Screenshot (1511).png" alt="">
             </div>
             <div class="car-info">
                 <h2>2022 LAMBORGHINI URUS MANSORY ENDITION</h2>
