--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
     <div class="cars-container" id="last">
         <div class="car-card">
             <div class="img-container">
-                <img data-src="images/g65.jpg" alt="">
-                <img data-src="images/g65-pic2.jpg" alt="">
-                <img data-src="images/g65-pic3.jpg" alt="">
-                <img data-src="images/g65-pic4.jpg" alt="">
-                <img data-src="images/g65-pic1.jpg" alt="">
-                <img data-src="images/g65-pic5.jpg" alt="">
+                <img data-src="images/g65.webp" alt="">
+                <img data-src="images/g65-pic2.webp" alt="">
+                <img data-src="images/g65-pic3.webp" alt="">
+                <img data-src="images/g65-pic4.webp" alt="">
+                <img data-src="images/g65-pic1.webp" alt="">
+                <img data-src="images/g65-pic5.webp" alt="">
             </div>
             <div class="car-info">
                 <h2>2023 MERCEDES-AMG G63 BRABUS 800</h2>
@@ -138,12 +138,12 @@
         </div>
         <div class="car-card">
             <div class="img-container">
-                <img data-src="images/x6-4.jpg" alt="">
-                <img data-src="images/X6.jpg" alt="">
-                <img data-src="images/x6-1.png" alt="">
-                <img data-src="images/x6-3.png" alt="">
-                <img data-src="images/x6-5.jpg" alt="">
-                <img data-src="images/x6-2.png" alt="">
+                <img data-src="images/x6-4.webp" alt="">
+                <img data-src="images/X6.webp" alt="">
+                <img data-src="images/x6-1.webp" alt="">
+                <img data-src="images/x6-3.webp" alt="">
+                <img data-src="images/x6-5.webp" alt="">
+                <img data-src="images/x6-2.webp" alt="">
             </div>
             <div class="car-info">
                 <h2>2022 BMW X6 M MANHART EDITION</h2>
@@ -158,12 +158,12 @@
         </div>
         <div class="car-card">
             <div class="img-container">
-                <img data-src="images/Screenshot (1514).png" alt="">
-                <img data-src="images/urus.jpg" alt="">
-                <img data-src="images/Screenshot (1509).png" alt="">
-                <img data-src="images/Screenshot (1510).png" alt="">
-                <img data-src="images/Screenshot (1512).png" alt="">
-                <img data-src="images/Screenshot (1511).png" alt="">
+                <img data-src="images/Screenshot (1514).webp" alt="">
+                <img data-src="images/urus.webp" alt="">
+                <img data-src="images/Screenshot (1509).webp" alt="">
+                <img data-src="images/Screenshot (1510).webp" alt="">
+                <img data-src="images/Screenshot (1512).webp" alt="">
+                <img data-src="images/Screenshot (1511).webp" alt="">
             </div>
             <div class="car-info">
                 <h2>2022 LAMBORGHINI URUS MANSORY ENDITION</h2>
