Added linkedin link

--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
                     class="fab fa-facebook"></i></a>
             <a href="https://github.com/DenisDanov" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://www.instagram.com/denisdanov69/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/denis-danov-510756246/" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
         <div class="copyright-section">
             <p>&copy; 2023 Danov's Auto Show. All rights reserved.</p>
