fixed imgs in preview not loading

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img class="logo-img" src="images/logo.png" alt="Logo">
         </a>
         <div class="h1">
-            <h1>Where Luxury Meets Performance</h1> 
+            <h1>Where Luxury Meets Performance</h1>
         </div>
         <div class="container">
             <button class="hamburger" id="hamburgerButton">
@@ -205,11 +205,11 @@
         <div class="car-card">
             <div class="img-container" data-flickity='{ "lazyLoad": true }'>
                 <img data-flickity-lazyload="images/g65.webp" alt="">
-                <img data-flickity-lazyload="images/g65-pic2.webp" alt="">
-                <img data-flickity-lazyload="images/g65-pic3.webp" alt="">
-                <img data-flickity-lazyload="images/g65-pic4.webp" alt="">
-                <img data-flickity-lazyload="images/g65-pic1.webp" alt="">
-                <img data-flickity-lazyload="images/g65-pic5.webp" alt="">
+                <img src="images/g65-pic2.webp" alt="">
+                <img src="images/g65-pic3.webp" alt="">
+                <img src="images/g65-pic4.webp" alt="">
+                <img src="images/g65-pic1.webp" alt="">
+                <img src="images/g65-pic5.webp" alt="">
             </div>
             <div class="car-info">
                 <h2>2023 MERCEDES-AMG G63 BRABUS 800</h2>
@@ -225,11 +225,11 @@
         <div class="car-card">
             <div class="img-container" data-flickity='{ "lazyLoad": true }'>
                 <img data-flickity-lazyload="images/x6-4.webp" alt="">
-                <img data-flickity-lazyload="images/X6.webp" alt="">
-                <img data-flickity-lazyload="images/x6-1.webp" alt="">
-                <img data-flickity-lazyload="images/x6-3.webp" alt="">
-                <img data-flickity-lazyload="images/x6-5.webp" alt="">
-                <img data-flickity-lazyload="images/x6-2.webp" alt="">
+                <img src="images/X6.webp" alt="">
+                <img src="images/x6-1.webp" alt="">
+                <img src="images/x6-3.webp" alt="">
+                <img src="images/x6-5.webp" alt="">
+                <img src="images/x6-2.webp" alt="">
             </div>
             <div class="car-info">
                 <h2>2022 BMW X6 M MANHART EDITION</h2>
@@ -245,11 +245,11 @@
         <div class="car-card">
             <div class="img-container" data-flickity='{ "lazyLoad": true }'>
                 <img data-flickity-lazyload="images/Screenshot (1514).webp" alt="">
-                <img data-flickity-lazyload="images/urus.webp" alt="">
-                <img data-flickity-lazyload="images/Screenshot (1509).webp" alt="">
-                <img data-flickity-lazyload="images/Screenshot (1510).webp" alt="">
-                <img data-flickity-lazyload="images/Screenshot (1512).webp" alt="">
-                <img data-flickity-lazyload="images/Screenshot (1511).webp" alt="">
+                <img src="images/urus.webp" alt="">
+                <img src="images/Screenshot (1509).webp" alt="">
+                <img src="images/Screenshot (1510).webp" alt="">
+                <img src="images/Screenshot (1512).webp" alt="">
+                <img src="images/Screenshot (1511).webp" alt="">
             </div>
             <div class="car-info">
                 <h2>2022 LAMBORGHINI URUS MANSORY</h2>
@@ -298,8 +298,8 @@
                     cellAlign: 'left',
                     contain: true,
                     prevNextButtons: true,
-                    lazyLoad: true, // Enable lazy-loading
-                    autoPlay: 2000 // Adjust as needed
+                    lazyLoad: true,
+                    autoPlay: 2000
                 });
             });
         });
@@ -318,7 +318,8 @@
                     class="fab fa-facebook"></i></a>
             <a href="https://github.com/DenisDanov" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://www.instagram.com/denisdanov69/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/denis-danov-510756246/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/denis-danov-510756246/" target="_blank"><i
+                    class="fab fa-linkedin"></i></a>
         </div>
         <div class="copyright-section">
             <p>&copy; 2023 Danov's Auto Show. All rights reserved.</p>
